--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Crystal Skull Collector</title>
+
+    <!-- Add links to Reset stylesheet, CSS stylesheet, Bootstrap, jQuery -->
+    <link rel = "stylesheet" href = "assets/css/reset.css">
+
+
+    <link rel = "stylesheet" href = "assets/css/style.css">
+
+
+
+
 </head>
 <body>
     
@@ -59,7 +69,7 @@ REPEAT THIS FO ALL THE GEMS!! / or use # for all of them?? - check the hangman g
 -->
 
 
-     -->
+     
 
 
 </body>
