--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ in HTML link
 
 
 <!-- Link to Javascript files -->
-<script src = "../unit-4-game/assets/javascipt/game.js"></script>
+<script src = "./assets/javascript/game.js"></script>
 
      
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -143,5 +143,5 @@ in HTML link
 
 console.log(makeid()); -->
 
-
+<!-- <div class = "animated infinite pulse" id="crystals"></div> -->
   
