--- a/index.html
+++ b/index.html
@@ -95,53 +95,18 @@
         </div>
 
 
+   
+<!-- Links to Javascript files -->
 
-    
-<!-- Premise - use JQuery to update "html"
-
-in HTML create IDs for:
-      winCounts
-      lossCounts
-      scoreSpace
-
-in HTML link 
-        reset sheet
-        css sheet
-        script????
-        google fonts
-        jquery / bootstrap???
-
-
-
-<!-- Link to Javascript files -->
-<script src = "./assets/javascript/game.js"></script>
-
-     
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+<script type = "text/javascript" src = "assets/javascript/game.js"></script>
 
 </body>
 </html> 
 
 
-
-    <!-- //1) how to create a button with jquery??
-    - create buttons with assigned values (1-12)
-   2) create win/loss count
-   3) create random number generator (19-120)
-
-???? MAYBE function makeid() {
-  var text = "";
-  var possible = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
-
-  for (var i = 0; i < 5; i++)
-    text += possible.charAt(Math.floor(Math.random() * possible.length));
-
-  return text;
-}
-
-console.log(makeid()); -->
 
 <!-- <div class = "animated infinite pulse" id="crystals"></div> -->
   
